--- a/assets/main.css
+++ b/assets/main.css
@@ -14,6 +14,9 @@
     --color-gold: #68665e;
     --color-gold-pale: #E7E6E2;
 
+	--color-key:#101828;
+	--color-key-light:#222834;
+
     /* Fonts
     -------------------------------------- */
 
@@ -50,6 +53,26 @@
 
 }
 
+/*font sample
+
+Ryo Text PlusN R
+font-family: ryo-text-plusn, serif;
+font-weight: 400;
+
+
+Ryo Text PlusN M
+font-family: ryo-text-plusn, serif;
+font-weight: 500;
+font-style: normal;
+
+
+Ryo Text PlusN L
+font-family: ryo-text-plusn, serif;
+font-weight: 300;
+font-style: normal;
+
+
+*/
 
 /*--- reset CSS ---*/
 html,body,div,span,applet,object,iframe,h1,h2,h3,h4,h5,h6,p,blockquote,pre,a,abbr,acronym,address,big,cite,code,del,dfn,em,img,ins,kbd,q,s,samp,small,strike,strong,sub,sup,tt,var,b,u,i,center,dl,dt,dd,ol,ul,li,fieldset,form,label,legend,table,caption,tbody,tfoot,thead,tr,th,td,article,aside,canvas,details,embed,figure,figcaption,footer,header,hgroup,menu,nav,output,ruby,section,summary,time,mark,audio,video{margin:0;padding:0;border:0;font-size:100%;font:inherit;vertical-align:baseline;}article,aside,details,figcaption,figure,footer,header,hgroup,menu,nav,section{display:block;}body{line-height:1;}ol,ul{list-style:none;}blockquote,q{quotes:none;}blockquote:before,blockquote:after,q:before,q:after{content:'';content:none;}table{border-collapse:collapse;border-spacing:0;}body{-webkit-text-size-adjust:none}mark{background-color:transparent;color:inherit}input::-moz-focus-inner{border:0;padding:0}input[type="text"],input[type="email"],select,textarea{-moz-appearance:none;-webkit-appearance:none;-ms-appearance:none;appearance:none}
@@ -65,8 +88,12 @@ body {
 	overflow-x: hidden;
 	word-wrap: break-word;
 	background-color: #FFFFFF;
+	font-family: "Helvetica Neue",Arial,"Hiragino Kaku Gothic ProN", "Hiragino Sans",Meiryo,sans-serif;
+	line-height:1.6;
+	color:var(--color-key-light);
 }
 
+/*多分ギザギザのやつ*/
 body:before {
 	background-attachment: scroll;
 	content: '';
@@ -114,9 +141,6 @@ body.is-loading:after {
 	--viewport-height: 100vh;
 }
 
-html {
-
-}
 
 u {
 	text-decoration: underline;
@@ -198,8 +222,8 @@ a {
 }
 
 #main > .inner {
-	--padding-horizontal: 4rem;
-	--padding-vertical: 8rem;
+	--padding-horizontal: 2rem;
+	--padding-vertical: 4rem;
 	--spacing: 1rem;
 	--width: 50rem;
 	border-radius: var(--border-radius-tl) var(--border-radius-tr) var(--border-radius-br) var(--border-radius-bl);
@@ -209,7 +233,7 @@ a {
 	z-index: 1;
 	padding: var(--padding-vertical) var(--padding-horizontal);
 }
-
+/*
 #main > .inner > * {
 	margin-top: var(--spacing);
 	margin-bottom: var(--spacing);
@@ -221,7 +245,7 @@ a {
 
 #main > .inner > :last-child {
 	margin-bottom: 0 !important;
-}
+}*/
 
 #main > .inner > .full {
 	margin-left: calc(var(--padding-horizontal) * -1);
@@ -295,12 +319,37 @@ body.is-instant:after {
 	z-index: 0;
 }
 
+h1, h2, h3, h4{
+	font-family: ryo-text-plusn, serif;
+	line-height:1.3;
+	
+	color:var(--color-key);
+	}
+
+	
 h1{
 	font-size:2rem;
 }
 h1, h2, h3, p {
 	direction: var(--site-language-direction);
 	position: relative;
+}
+h1, h2{
+	font-weight:600;
+}
+
+h2{
+	font-size:1.5rem;
+	margin-bottom:1em;
+}
+section{
+	margin:120px 0;
+}
+
+
+p{
+	margin:1.5em 0;
+	
 }
 
 h1 span.p, h2 span.p, h3 span.p, p span.p {
@@ -312,128 +361,6 @@ h1 span[style], h2 span[style], h3 span[style], p span[style], h1 strong, h2 str
 	-webkit-text-fill-color: currentcolor;
 }
 
-h1.style2:not(:first-child), h2.style2:not(:first-child), h3.style2:not(:first-child), p.style2:not(:first-child) {
-	margin-top: 2.125rem !important;
-}
-
-h1.style2:not(:last-child), h2.style2:not(:last-child), h3.style2:not(:last-child), p.style2:not(:last-child) {
-	margin-bottom: 2.125rem !important;
-}
-
-h1.style2, h2.style2, h3.style2, p.style2 {
-	text-transform: uppercase;
-	color: rgba(0,0,0,0.69);
-	font-family: 'Archivo', sans-serif;
-	letter-spacing: 0.1rem;
-	width: calc(100% + 0.1rem);
-	font-size: 0.875em;
-	line-height: 2;
-	font-weight: 600;
-}
-
-h1.style2 mark, h2.style2 mark, h3.style2 mark, p.style2 mark {
-	color: #4D4D4D;
-	background-color: transparent;
-}
-
-h1.style2 a, h2.style2 a, h3.style2 a, p.style2 a {
-	text-decoration: underline;
-}
-
-h1.style2 a:hover, h2.style2 a:hover, h3.style2 a:hover, p.style2 a:hover {
-	text-decoration: none;
-}
-
-h1.style2 span.p:nth-child(n + 2), h2.style2 span.p:nth-child(n + 2), h3.style2 span.p:nth-child(n + 2), p.style2 span.p:nth-child(n + 2) {
-	margin-top: 1rem;
-}
-
-h1.style3, h2.style3, h3.style3, p.style3 {
-	color: rgba(0,0,0,0.69);
-	font-family: 'Archivo', sans-serif;
-	letter-spacing: 0.05rem;
-	width: calc(100% + 0.05rem);
-	font-size: 2.25em;
-	line-height: 1.75;
-	font-weight: 400;
-}
-
-h1.style3 mark, h2.style3 mark, h3.style3 mark, p.style3 mark {
-	color: #3E64FF;
-	background-color: transparent;
-}
-
-h1.style3 a, h2.style3 a, h3.style3 a, p.style3 a {
-	text-decoration: none;
-}
-
-h1.style3 a:hover, h2.style3 a:hover, h3.style3 a:hover, p.style3 a:hover {
-	text-decoration: underline;
-}
-
-h1.style3 span.p:nth-child(n + 2), h2.style3 span.p:nth-child(n + 2), h3.style3 span.p:nth-child(n + 2), p.style3 span.p:nth-child(n + 2) {
-	margin-top: 1rem;
-}
-
-h1.style1, h2.style1, h3.style1, p.style1 {
-	color: rgba(0,0,0,0.69);
-	font-family: 'Archivo', sans-serif;
-	letter-spacing: 0.025rem;
-	width: calc(100% + 0.025rem);
-	font-size: 0.875em;
-	line-height: 2.25;
-	font-weight: 600;
-}
-
-h1.style1 a, h2.style1 a, h3.style1 a, p.style1 a {
-	color: #000000;
-	text-decoration: underline;
-}
-
-h1.style1 mark, h2.style1 mark, h3.style1 mark, p.style1 mark {
-	color: #A6A6A6;
-	background-color: #FFFFFF;
-}
-
-h1.style1 a:hover, h2.style1 a:hover, h3.style1 a:hover, p.style1 a:hover {
-	text-decoration: none;
-}
-
-h1.style1 span.p:nth-child(n + 2), h2.style1 span.p:nth-child(n + 2), h3.style1 span.p:nth-child(n + 2), p.style1 span.p:nth-child(n + 2) {
-	margin-top: 1rem;
-}
-
-#text05 {
-	font-size: 0.875rem;
-	line-height: 1.6;
-}
-
-h1.style4, h2.style4, h3.style4, p.style4 {
-	color: #000000;
-	font-family: 'Archivo', sans-serif;
-	letter-spacing: 0.025rem;
-	width: calc(100% + 0.025rem);
-	font-size: 1em;
-	line-height: 1.5;
-	font-weight: 400;
-}
-
-h1.style4 a:hover, h2.style4 a:hover, h3.style4 a:hover, p.style4 a:hover {
-	color: #0066F5;
-}
-
-h1.style4 mark, h2.style4 mark, h3.style4 mark, p.style4 mark {
-	color: #3E64FF;
-	background-color: transparent;
-}
-
-h1.style4 a, h2.style4 a, h3.style4 a, p.style4 a {
-	text-decoration: underline;
-}
-
-h1.style4 span.p:nth-child(n + 2), h2.style4 span.p:nth-child(n + 2), h3.style4 span.p:nth-child(n + 2), p.style4 span.p:nth-child(n + 2) {
-	margin-top: 1rem;
-}
 
 .icons {
 	display: flex;
@@ -548,10 +475,10 @@ h1.style4 span.p:nth-child(n + 2), h2.style4 span.p:nth-child(n + 2), h3.style4 
 	flex-direction: row;
 	flex-wrap: wrap;
 }
-
+/*
 .buttons.style1:not(:first-child) {
 	margin-top: 2.5rem !important;
-}
+}*/
 
 .buttons.style1:not(:last-child) {
 	margin-bottom: 2.5rem !important;
@@ -804,7 +731,7 @@ h1.style4 span.p:nth-child(n + 2), h2.style4 span.p:nth-child(n + 2), h3.style4 
 	justify-content: center;
 	background-color: transparent;
 }
-
+/*
 .container.style2:not(:first-child) {
 	margin-top: 8rem !important;
 }
@@ -812,7 +739,7 @@ h1.style4 span.p:nth-child(n + 2), h2.style4 span.p:nth-child(n + 2), h3.style4 
 .container.style2:not(:last-child) {
 	margin-bottom: 8rem !important;
 }
-
+*/
 .container.style2 > .wrapper > .inner {
 	--gutters: 2rem;
 	--padding-horizontal: 0rem;
@@ -824,7 +751,7 @@ h1.style4 span.p:nth-child(n + 2), h2.style4 span.p:nth-child(n + 2), h3.style4 
 	max-width: var(--width);
 	width: 100%;
 }
-
+/*
 .container.style2.default > .wrapper > .inner > * {
 	margin-bottom: var(--spacing);
 	margin-top: var(--spacing);
@@ -837,7 +764,7 @@ h1.style4 span.p:nth-child(n + 2), h2.style4 span.p:nth-child(n + 2), h3.style4 
 .container.style2.default > .wrapper > .inner > *:last-child {
 	margin-bottom: 0 !important;
 }
-
+*/
 .container.style2.columns > .wrapper > .inner {
 	flex-wrap: wrap;
 	display: flex;
@@ -963,14 +890,14 @@ h1.style4 span.p:nth-child(n + 2), h2.style4 span.p:nth-child(n + 2), h3.style4 
 	background-position: center;
 	background-repeat: repeat;
 }
-
+/*
 .container.style3:not(:first-child) {
 	margin-top: 8rem !important;
 }
 
 .container.style3:not(:last-child) {
 	margin-bottom: 8rem !important;
-}
+}*/
 
 .container.style3 > .wrapper > .inner {
 	--gutters: 2rem;
@@ -981,7 +908,7 @@ h1.style4 span.p:nth-child(n + 2), h2.style4 span.p:nth-child(n + 2), h3.style4 
 	max-width: var(--width);
 	width: 100%;
 }
-
+/*
 .container.style3.default > .wrapper > .inner > * {
 	margin-bottom: var(--spacing);
 	margin-top: var(--spacing);
@@ -993,7 +920,7 @@ h1.style4 span.p:nth-child(n + 2), h2.style4 span.p:nth-child(n + 2), h3.style4 
 
 .container.style3.default > .wrapper > .inner > *:last-child {
 	margin-bottom: 0 !important;
-}
+}*/
 
 .container.style3.columns > .wrapper > .inner {
 	flex-wrap: wrap;
@@ -1025,7 +952,7 @@ h1.style4 span.p:nth-child(n + 2), h2.style4 span.p:nth-child(n + 2), h3.style4 
 .container.style3.columns > .wrapper > .inner > *:first-child {
 	margin-left: calc(var(--gutters) * -1);
 }
-
+/*
 .container.style3.default > .wrapper > .inner > .full {
 	margin-left: calc(var(--padding-horizontal) * -1);
 	max-width: none !important;
@@ -1043,7 +970,7 @@ h1.style4 span.p:nth-child(n + 2), h2.style4 span.p:nth-child(n + 2), h3.style4 
 	border-bottom-left-radius: inherit;
 	border-bottom-right-radius: inherit;
 }
-
+*/
 .container.style3.columns > .wrapper > .inner > div > .full {
 	margin-left: calc(var(--gutters) * -0.5);
 	max-width: none !important;
@@ -1139,6 +1066,7 @@ h1.style4 span.p:nth-child(n + 2), h2.style4 span.p:nth-child(n + 2), h3.style4 
 	border-bottom-right-radius: inherit;
 }
 
+/*
 .image.style1:not(:first-child) {
 	margin-top: 4rem !important;
 }
@@ -1146,10 +1074,11 @@ h1.style4 span.p:nth-child(n + 2), h2.style4 span.p:nth-child(n + 2), h3.style4 
 .image.style1:not(:last-child) {
 	margin-bottom: 4rem !important;
 }
+*/
 
 .image.style1 .frame {
 	width: 100vw;
-	height: 27.375rem;
+	height: auto;
 	transition: none;
 }
 
@@ -1196,6 +1125,16 @@ hr.style1:before {
 /*--- Add --*/
 
 
+.youtube {
+	width: 100%;
+	aspect-ratio: 16 / 9;
+  }
+  .youtube iframe {
+	width: 100%;
+	height: 100%;
+  }
+
+
 /* Hero
 --------------------------------------------- */
 .hero {
@@ -1230,6 +1169,16 @@ hr.style1:before {
 	left:20px;
 }
 
+
+/* Footer
+--------------------------------------------- */
+
+
+footer{
+	width:100%;
+	height:120px;
+	background-color: #666;
+}
 @media (max-width: 1920px) {
 	
 }
@@ -1534,113 +1483,6 @@ hr.style1:before {
 		width: auto;
 	}
 	
-	#container03 > .wrapper > .inner > :nth-child(1) {
-		width: 100% !important;
-		min-height: 100% !important;
-	}
-	
-	#container03 > .wrapper > .inner > :nth-child(2) {
-		width: 100% !important;
-		min-height: 100% !important;
-	}
-	
-	
-	
-	.container.style3:not(:first-child) {
-		margin-top: 2.625rem !important;
-	}
-	
-	.container.style3:not(:last-child) {
-		margin-bottom: 2.625rem !important;
-	}
-	
-	.container.style3 > .wrapper > .inner {
-		--gutters: 2rem;
-	}
-	
-	.container.style3.columns > .wrapper > .inner {
-		flex-direction: column !important;
-		flex-wrap: nowrap !important;
-	}
-	
-	.container.style3.columns > .wrapper > .inner > span {
-		height: 0;
-		margin-top: calc(var(--gutters) * -1);
-		pointer-events: none;
-		visibility: hidden;
-	}
-	
-	.container.style3.columns > .wrapper > .inner > *:first-child {
-		margin-left: 0 !important;
-		padding-top: 0 !important;
-	}
-	
-	.container.style3.columns > .wrapper > .inner > * {
-		padding: calc(var(--gutters) * 0.5) 0 !important;
-	}
-	
-	.container.style3.columns > .wrapper > .inner > *:last-child {
-		padding-bottom: 0 !important;
-	}
-	
-	.container.style3.columns > .wrapper > .inner > div > .full {
-		margin-left: calc(var(--padding-horizontal) * -1);
-		width: calc(100% + (var(--padding-horizontal) * 2) + 0.4725px);
-	}
-	
-	.container.style3.columns > .wrapper > .inner > div:first-of-type > .full {
-		margin-left: calc(var(--padding-horizontal) * -1);
-		width: calc(100% + (var(--padding-horizontal) * 2) + 0.4725px);
-	}
-	
-	.container.style3.columns > .wrapper > .inner > div:last-of-type > .full {
-		margin-left: calc(var(--padding-horizontal) * -1);
-		width: calc(100% + (var(--padding-horizontal) * 2) + 0.4725px);
-	}
-	
-	.container.style3.columns > .wrapper > .inner > div > .full:first-child {
-		margin-top: calc(var(--gutters) * -0.5) !important;
-	}
-	
-	.container.style3.columns > .wrapper > .inner > div > .full:last-child {
-		margin-bottom: calc(var(--gutters) * -0.5) !important;
-	}
-	
-	.container.style3.columns > .wrapper > .inner > div:first-of-type > .full:first-child {
-		margin-top: calc(var(--padding-vertical) * -1) !important;
-	}
-	
-	.container.style3.columns > .wrapper > .inner > div:last-of-type > .full:last-child {
-		margin-bottom: calc(var(--padding-vertical) * -1) !important;
-	}
-	
-	.container.style3.columns > .wrapper > .inner > div:first-of-type, .container.style3.columns > .wrapper > .inner > div:first-of-type > .full:first-child {
-		border-top-left-radius: inherit;
-		border-top-right-radius: inherit;
-	}
-	
-	.container.style3.columns > .wrapper > .inner > div:last-of-type, .container.style3.columns > .wrapper > .inner > div:last-of-type > .full:last-child {
-		border-bottom-left-radius: inherit;
-		border-bottom-right-radius: inherit;
-	}
-	
-	.container.style3.columns > .wrapper > .inner > div:first-of-type, .container.style3.columns > .wrapper > .inner > div:first-of-type > .full:last-child {
-		border-bottom-left-radius: 0 !important;
-	}
-	
-	.container.style3.columns > .wrapper > .inner > div:last-of-type, .container.style3.columns > .wrapper > .inner > div:last-of-type > .full:first-child {
-		border-top-right-radius: 0 !important;
-	}
-	
-	.container.style3.columns > .wrapper > .inner > .full > .full:first-child:last-child {
-		height: auto;
-	}
-	
-	.container.style3.columns > .wrapper > .inner > .full > .full:first-child:last-child > * {
-		height: auto;
-		position: relative;
-		width: auto;
-	}
 	
 	.image.style1:not(:first-child) {
 		margin-top: 2.625rem !important;
@@ -1696,11 +1538,7 @@ hr.style1:before {
 	h1.style2, h2.style2, h3.style2, p.style2 {
 		font-size: 0.875em;
 	}
-	
-	h1.style3, h2.style3, h3.style3, p.style3 {
-		font-size: 1.625em;
-	}
-	
+
 	h1.style1, h2.style1, h3.style1, p.style1 {
 		font-size: 0.875em;
 	}
