--- a/docs/assets/main.css
+++ b/docs/assets/main.css
@@ -307,62 +307,11 @@ body.is-instant:after {
 }
 
 h1, h2, h3, h4{
-	font-family: zen-old-mincho,ryo-text-plusn, serif;
+	font-family:ryo-text-plusn, serif;
 	line-height:1.3;
 
 	}
-
 	
-	.hero{
-		color:#fff;
-		font-family: zen-old-mincho,ryo-text-plusn, serif;
-		font-weight:200;
-	}
-
-	.hero h1>span{
-		display:block;
-		font-size:72px;
-		font-weight:200;
-		font-family: zen-old-mincho,ryo-text-plusn, serif;
-	
-	}
-	.hero h1>span.ja{
-		font-size:1.75rem;
-		
-	}
-	.hero h1>span.en{
-		/*letter-spacing: 0.1em;*/
-	}
-	.hero .info p{
-		margin:0;
-	}
-
-	.hero .info p.date{
-		font-size:3rem;
-	}
-	.hero .info p.time{
-		font-size:1.5rem;
-	}
-	.hero .info p.location{
-		font-size:1.25rem;
-	}
-	.hero .info .location-data{
-		display: flex;
-		font-size:1rem;
-	}
-	.hero .info .location-data>p{
-		margin-right:8px;
-	}
-	.hero .info a{
-		display:flex;
-		text-decoration: none;
-
-	}
-	.hero .info a>img{
-		width:1em;
-		height:1em;
-		margin-left:6px;
-	}
 h1{
 	font-size:2rem;
 	font-weight:400;
@@ -1022,41 +971,94 @@ hr.style1:before {
 
 .hero-wrapper{
 	background-color: var(--color-key);
+	z-index:-3;
 }
 .hero {
     height: 100vh;
     display: flex;
 	position:relative;
+	color:#fff;
+	font-family:ryo-text-plusn, serif;
+	font-weight:300;
+	z-index:0;
 }
-
-
+/*
 .hero>div {
     height: 100vh;
     display: inline-block;
-}
+}*/
 
-.hero .side-R, .hero .side-L {
-    background-color: #fff;
-    width: var(--margin-side-fv);
-}
 
+/*
 
 .hero .mv {
 
-    width: 100%;/*calc(100% - var(--margin-side-fv) * 2)*/
+    width: 100%;
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center center;
     background-image: url(./images/key.jpg);
 
 
-}
+}*/
+
 
 .hero .title{
-padding:48px;
-z-index:10;
+	padding:48px;
+	z-index:-2;
+	position: fixed;
+	}
+	
+	
+
+.hero h1>span, .hero h1>span.en>span{
+	display:block;
+	font-size:72px;
+	line-height:1;
+	margin-bottom:20px;
+
+}
+.hero h1>span.ja{
+	font-size:1.75rem;
+	line-height:1.3;
+	
+}
+ .hero h1>span.en{
+	margin-top:32px;
+	font-weight:200;
+	/*letter-spacing: 0.1em;
+	font-feature-settings: "palt";*/
+}
+.hero .info p{
+	margin:0;
 }
 
+.hero .info p.date{
+	font-size:3rem;
+}
+.hero .info p.time{
+	font-size:1.5rem;
+}
+.hero .info p.location{
+	font-size:1.25rem;
+}
+.hero .info .location-data{
+	display: flex;
+	font-size:1rem;
+}
+.hero .info .location-data>p{
+	margin-right:8px;
+}
+.hero .info a{
+	display:flex;
+	text-decoration: none;
+
+}
+.hero .info a>img{
+	width:1em;
+	height:1em;
+	margin-left:6px;
+}
 
 
 #wrapper {
@@ -1136,43 +1138,7 @@ background: linear-gradient(to left top,  #00527e00,#00527ee4);;
 		--padding-vertical: 3.5rem;
 		--spacing: 1rem;
 	}
-	/*
-	h1.style2:not(:first-child), h2.style2:not(:first-child), h3.style2:not(:first-child), p.style2:not(:first-child) {
-		margin-top: 1.59375rem !important;
-	}
-	
-	h1.style2:not(:last-child), h2.style2:not(:last-child), h3.style2:not(:last-child), p.style2:not(:last-child) {
-		margin-bottom: 1.59375rem !important;
-	}
-	
-	h1.style2, h2.style2, h3.style2, p.style2 {
-		letter-spacing: 0.0875rem;
-		width: calc(100% + 0.0875rem);
-		font-size: 0.875em;
-		line-height: 2;
-	}
-	
-	h1.style3, h2.style3, h3.style3, p.style3 {
-		letter-spacing: 0.04375rem;
-		width: calc(100% + 0.04375rem);
-		font-size: 1.625em;
-		line-height: 1.625;
-	}
-	
-	h1.style1, h2.style1, h3.style1, p.style1 {
-		letter-spacing: 0.021875rem;
-		width: calc(100% + 0.021875rem);
-		font-size: 0.875em;
-		line-height: 2.25;
-	}
-	
-	h1.style4, h2.style4, h3.style4, p.style4 {
-		letter-spacing: 0.021875rem;
-		width: calc(100% + 0.021875rem);
-		font-size: 1em;
-		line-height: 1.5;
-	}
-	*/
+
 	.icons.style1 {
 		font-size: 1.375em;
 		gap: 0.875rem;
