--- a/docs/assets/main.css
+++ b/docs/assets/main.css
@@ -20,22 +20,6 @@
     /* Fonts
     -------------------------------------- */
 
-
-
-    --font-size-h1: 1.75rem;
-    --font-size-h1-sub: 1.2rem;
-    --font-size-h2: 4.5rem;
-    --font-size-h3: 1.5rem;
-    --font-size-h4: 1.125rem;
-
-    --font-size-button: 1.3125rem;
-    --font-size-outline: 1.25rem;
-
-    --font-size-exhibition-name: 1.25rem;
-
-    --font-size-ul: 0.875rem;
-    --font-size-caption: 0.875rem;
-
     /* Shadow
     -------------------------------------- */
     --shadow-top-fixed: drop-shadow(0 2px 2px rgba(0, 0, 0, 0.2));
@@ -93,7 +77,7 @@ body {
 	color:var(--color-key-light);
 }
 
-/*多分ギザギザのやつ*/
+/*多分ギザギザのやつ
 body:before {
 	background-attachment: scroll;
 	content: '';
@@ -110,7 +94,7 @@ body:before {
 	background-size: 574px;
 	background-position: center;
 	background-repeat: repeat;
-}
+}*/
 
 body:after {
 	background-color: #FFFFFF;
@@ -200,7 +184,7 @@ a {
 	min-height: var(--viewport-height);
 	overflow: hidden;
 	position: relative;
-	z-index: 2;
+	z-index: 4;
 }
 
 #main {
@@ -359,7 +343,7 @@ h1 span[style], h2 span[style], h3 span[style], p span[style], h1 strong, h2 str
 
 .icons li {
 	position: relative;
-	z-index: 1;
+	/*z-index: 1;*/
 }
 
 .icons li a {
@@ -381,7 +365,7 @@ h1 span[style], h2 span[style], h3 span[style], p span[style], h1 strong, h2 str
 	position: absolute;
 	top: 0;
 	width: 100%;
-	z-index: -1;
+	/*z-index: -1;*/
 }
 
 .icons li a .label {
@@ -394,11 +378,7 @@ h1 span[style], h2 span[style], h3 span[style], p span[style], h1 strong, h2 str
 }
 
 .icons.style1:not(:first-child) {
-	margin-top: 2.125rem !important;
-}
-
-.icons.style1:not(:last-child) {
-	margin-bottom: 2.125rem !important;
+	margin-top:24px;
 }
 
 .icons.style1 li a {
@@ -416,11 +396,11 @@ h1 span[style], h2 span[style], h3 span[style], p span[style], h1 strong, h2 str
 
 /*この辺がscgiconの色*/
 .icons.style1 a svg {
-	fill: rgba(255,255,255,0.9);
+	fill: rgba(255,255,255,1);
 }
 
 .icons.style1 a {
-	border: solid 1px rgba(255,255,255,0.9);
+	border: solid 1px rgba(255,255,255,1);
 }
 
 .icons.style1 li a + svg {
@@ -971,7 +951,7 @@ hr.style1:before {
 
 .hero-wrapper{
 	background-color: var(--color-key);
-	z-index:-3;
+	/*z-index:-3;*/
 }
 .hero {
     height: 100vh;
@@ -979,8 +959,7 @@ hr.style1:before {
 	position:relative;
 	color:#fff;
 	font-family:ryo-text-plusn, serif;
-	font-weight:300;
-	z-index:0;
+	font-weight:400;
 }
 /*
 .hero>div {
@@ -1005,59 +984,87 @@ hr.style1:before {
 
 .hero .title{
 	padding:48px;
-	z-index:-2;
-	position: fixed;
+	z-index:3;
+	/*position: fixed;*/
 	}
-	
 	
 
 .hero h1>span, .hero h1>span.en>span{
 	display:block;
-	font-size:72px;
-	line-height:1;
-	margin-bottom:20px;
-
+	
+	
 }
 .hero h1>span.ja{
 	font-size:1.75rem;
-	line-height:1.3;
+	line-height:1.6;
 	
 }
  .hero h1>span.en{
-	margin-top:32px;
+	line-height:1;
+	font-size:72px;
+	margin:0.5em 0;
 	font-weight:200;
+	
 	/*letter-spacing: 0.1em;
 	font-feature-settings: "palt";*/
 }
+.hero h1>span.en>span{
+	margin-bottom:20px;
+
+}
 .hero .info p{
-	margin:0;
+	margin:0.2em 0;
 }
 
 .hero .info p.date{
-	font-size:3rem;
+	font-size:2.5rem;
+	line-height:1.2;
 }
 .hero .info p.time{
 	font-size:1.5rem;
 }
 .hero .info p.location{
 	font-size:1.25rem;
+	margin-top:1em;
 }
 .hero .info .location-data{
 	display: flex;
-	font-size:1rem;
+	align-items: center;
 }
 .hero .info .location-data>p{
-	margin-right:8px;
+	margin-right:12px;
+	font-size:1rem;
 }
 .hero .info a{
 	display:flex;
+	align-items: center;
+	position: relative;
+	display: inline-block;
 	text-decoration: none;
-
 }
+
+
+.hero .info a::after {
+	position: absolute;
+	bottom: -1px;
+	left: 0;
+	content: '';
+	width: 100%;
+	height: 1px;
+	background: #fff;
+	transform: scale(0, 1);
+	transform-origin: right top;
+	transition: transform .3s;
+  }
+  .hero .info a:hover::after {
+	transform-origin: left top;
+	transform: scale(1, 1);
+  }
+
 .hero .info a>img{
 	width:1em;
 	height:1em;
-	margin-left:6px;
+	margin-left:4px;
 }
 
 
@@ -1098,9 +1105,10 @@ hr.style1:before {
 	position:fixed;
 	width:calc(100% - 40px);
 	height:calc(100% - 40px);
-	z-index:4;
+	z-index:2;
 	left:20px;
 	top:20px;
+	user-select: none;
   }
 /* Footer
 --------------------------------------------- */
@@ -1115,6 +1123,16 @@ footer p{
 	font-size:0.75rem;
 	color:#666;
 	margin-bottom:32px;
+}
+
+
+@media (min-width:1600px) {
+.hero h1>span.en{
+
+   font-size:5.5vw;
+   margin:0.3em 0;
+}
+
 }
 
 @media (max-width:810px) {
@@ -1144,14 +1162,7 @@ background: linear-gradient(to left top,  #00527e00,#00527ee4);;
 		gap: 0.875rem;
 	}
 	
-	.icons.style1:not(:first-child) {
-		margin-top: 1.59375rem !important;
-	}
-	
-	.icons.style1:not(:last-child) {
-		margin-bottom: 1.59375rem !important;
-	}
-	
+
 	.buttons.style1:not(:first-child) {
 		margin-top: 1.875rem !important;
 	}
@@ -1397,23 +1408,94 @@ background: linear-gradient(to left top,  #00527e00,#00527ee4);;
 	}
 }
 
-@media (max-width: 480px) {
+@media (max-width: 640px) {
+
+
+	.hero h1>span.ja{
+		font-size:1.5rem;
+		
+	}
+	 .hero h1>span.en{
+		font-size:64px;
+	}
+	
+	.hero .info p{
+		margin:0.2em 0;
+	}
+	
+	.hero .info p.date{
+		font-size:2.25rem;
+	}
+	.hero .info p.location{
+		font-size:1.125rem;
+	}
+
+
+	.line-rect{
+		width:calc(100% - 32px);
+		height:calc(100% - 32px);
+		left:16px;
+		top:16px;
+	  }
+
+	  .hero .title{
+		padding:36px;
+		}
+
 	#main > .inner {
 		--spacing: 0.875rem;
 	}
-	
-	
-	
-	
-	
-	
+
 	
 	.image.style1 .frame {
 		height: 20rem !important;
 	}
 }
 
-@media (max-width: 360px) {
+@media (max-width: 420px) {
+	.hero h1>span.ja{
+		font-size:1.25rem;
+		
+	}
+
+	.hero h1>span.en>span{
+		margin-bottom:20px;
+	}
+	.hero .info p{
+		margin:0.2em 0;
+	}
+	
+	.hero .info p.date{
+		font-size:2rem;
+		
+	}
+
+	.hero .info p.location{
+	margin:1em 0;
+	}
+
+	.hero .info .location-data>p{
+		font-size:0.875rem;
+	}
+
+	.hero .info .location-data{
+		display: block;
+		margin-top:1em;
+	
+	}
+
+
+	.line-rect{
+		width:calc(100% - 24px);
+		height:calc(100% - 24px);
+		left:12px;
+		top:12px;
+	  }
+
+	  .hero .title{
+		padding:32px 24px 0;
+		}
+
 	#main > .inner {
 		--padding-horizontal: 1.5rem;
 		--padding-vertical: 2.625rem;
