レスポンシブの微調整

--- a/docs/assets/main.css
+++ b/docs/assets/main.css
@@ -308,9 +308,27 @@ h1, h2, h3, p {
 
 
 h2{
-	font-size:1.5rem;
-	margin-bottom:1em;
+	font-size:1.75rem;
+	margin-bottom:0.7em;
 	font-weight:600;
+	position:relative;
+	display:block;
+}
+
+h2:before{
+	position: absolute;
+	bottom: -0.25em;
+	left: -1em;
+	content:url(./images/rects.png);
+z-index:-1;
+}
+
+
+
+h2>img{
+display:block;
+width:80px;
+height:80px;
 }
 section{
 	margin:120px 0;
@@ -730,7 +748,7 @@ h1 span[style], h2 span[style], h3 span[style], p span[style], h1 strong, h2 str
 .container.style2.default > .wrapper > .inner > *:last-child {
 	margin-bottom: 0 !important;
 }
-*/
+
 .container.style2.columns > .wrapper > .inner {
 	flex-wrap: wrap;
 	display: flex;
@@ -836,7 +854,7 @@ h1 span[style], h2 span[style], h3 span[style], p span[style], h1 strong, h2 str
 	position: absolute;
 	width: 100%;
 }
-
+*/
 .image {
 	display: block;
 	line-height: 0;
@@ -1031,7 +1049,7 @@ hr.style1:before {
 	display: flex;
 	align-items: center;
 }
-.hero .info .location-data>p{
+.hero .info .location-data p{
 	margin-right:12px;
 	font-size:1rem;
 }
@@ -1181,213 +1199,7 @@ background: linear-gradient(to left top,  #00527e00,#00527ee4);;
 		width: 1em;
 	}
 	
-	
-	
-	.container.style1:not(:first-child) {
-		margin-top: 2.625rem !important;
-	}
-	
-	.container.style1:not(:last-child) {
-		margin-bottom: 2.625rem !important;
-	}
-	
-	.container.style1 > .wrapper > .inner {
-		--gutters: 2rem;
-	}
-	
-	.container.style1.columns > .wrapper > .inner {
-		flex-direction: column !important;
-		flex-wrap: nowrap !important;
-	}
-	
-	.container.style1.columns > .wrapper > .inner > span {
-		height: 0;
-		margin-top: calc(var(--gutters) * -1);
-		pointer-events: none;
-		visibility: hidden;
-	}
-	
-	.container.style1.columns > .wrapper > .inner > *:first-child {
-		margin-left: 0 !important;
-		padding-top: 0 !important;
-	}
-	
-	.container.style1.columns > .wrapper > .inner > * {
-		padding: calc(var(--gutters) * 0.5) 0 !important;
-	}
-	
-	.container.style1.columns > .wrapper > .inner > *:last-child {
-		padding-bottom: 0 !important;
-	}
-	
-	.container.style1.columns > .wrapper > .inner > div > .full {
-		margin-left: calc(var(--padding-horizontal) * -1);
-		width: calc(100% + (var(--padding-horizontal) * 2) + 0.4725px);
-	}
-	
-	.container.style1.columns > .wrapper > .inner > div:first-of-type > .full {
-		margin-left: calc(var(--padding-horizontal) * -1);
-		width: calc(100% + (var(--padding-horizontal) * 2) + 0.4725px);
-	}
-	
-	.container.style1.columns > .wrapper > .inner > div:last-of-type > .full {
-		margin-left: calc(var(--padding-horizontal) * -1);
-		width: calc(100% + (var(--padding-horizontal) * 2) + 0.4725px);
-	}
-	
-	.container.style1.columns > .wrapper > .inner > div > .full:first-child {
-		margin-top: calc(var(--gutters) * -0.5) !important;
-	}
-	
-	.container.style1.columns > .wrapper > .inner > div > .full:last-child {
-		margin-bottom: calc(var(--gutters) * -0.5) !important;
-	}
-	
-	.container.style1.columns > .wrapper > .inner > div:first-of-type > .full:first-child {
-		margin-top: calc(var(--padding-vertical) * -1) !important;
-	}
-	
-	.container.style1.columns > .wrapper > .inner > div:last-of-type > .full:last-child {
-		margin-bottom: calc(var(--padding-vertical) * -1) !important;
-	}
-	
-	.container.style1.columns > .wrapper > .inner > div:first-of-type, .container.style1.columns > .wrapper > .inner > div:first-of-type > .full:first-child {
-		border-top-left-radius: inherit;
-		border-top-right-radius: inherit;
-	}
-	
-	.container.style1.columns > .wrapper > .inner > div:last-of-type, .container.style1.columns > .wrapper > .inner > div:last-of-type > .full:last-child {
-		border-bottom-left-radius: inherit;
-		border-bottom-right-radius: inherit;
-	}
-	
-	.container.style1.columns > .wrapper > .inner > div:first-of-type, .container.style1.columns > .wrapper > .inner > div:first-of-type > .full:last-child {
-		border-bottom-left-radius: 0 !important;
-	}
-	
-	.container.style1.columns > .wrapper > .inner > div:last-of-type, .container.style1.columns > .wrapper > .inner > div:last-of-type > .full:first-child {
-		border-top-right-radius: 0 !important;
-	}
-	
-	.container.style1.columns > .wrapper > .inner > .full > .full:first-child:last-child {
-		height: auto;
-	}
-	
-	.container.style1.columns > .wrapper > .inner > .full > .full:first-child:last-child > * {
-		height: auto;
-		position: relative;
-		width: auto;
-	}
-	
-	
-	
-	.container.style2:not(:first-child) {
-		margin-top: 2.625rem !important;
-	}
-	
-	.container.style2:not(:last-child) {
-		margin-bottom: 2.625rem !important;
-	}
-	
-	.container.style2 > .wrapper > .inner {
-		--gutters: 2rem;
-		--padding-horizontal: 0rem;
-		--padding-vertical: 0rem;
-	}
-	
-	.container.style2.columns > .wrapper > .inner {
-		flex-direction: column !important;
-		flex-wrap: nowrap !important;
-	}
-	
-	.container.style2.columns > .wrapper > .inner > span {
-		height: 0;
-		margin-top: calc(var(--gutters) * -1);
-		pointer-events: none;
-		visibility: hidden;
-	}
-	
-	.container.style2.columns > .wrapper > .inner > *:first-child {
-		margin-left: 0 !important;
-		padding-top: 0 !important;
-	}
-	
-	.container.style2.columns > .wrapper > .inner > * {
-		padding: calc(var(--gutters) * 0.5) 0 !important;
-	}
-	
-	.container.style2.columns > .wrapper > .inner > *:last-child {
-		padding-bottom: 0 !important;
-	}
-	
-	.container.style2.columns > .wrapper > .inner > div > .full {
-		margin-left: calc(var(--padding-horizontal) * -1);
-		width: calc(100% + (var(--padding-horizontal) * 2) + 0.4725px);
-	}
-	
-	.container.style2.columns > .wrapper > .inner > div:first-of-type > .full {
-		margin-left: calc(var(--padding-horizontal) * -1);
-		width: calc(100% + (var(--padding-horizontal) * 2) + 0.4725px);
-	}
-	
-	.container.style2.columns > .wrapper > .inner > div:last-of-type > .full {
-		margin-left: calc(var(--padding-horizontal) * -1);
-		width: calc(100% + (var(--padding-horizontal) * 2) + 0.4725px);
-	}
-	
-	.container.style2.columns > .wrapper > .inner > div > .full:first-child {
-		margin-top: calc(var(--gutters) * -0.5) !important;
-	}
-	
-	.container.style2.columns > .wrapper > .inner > div > .full:last-child {
-		margin-bottom: calc(var(--gutters) * -0.5) !important;
-	}
-	
-	.container.style2.columns > .wrapper > .inner > div:first-of-type > .full:first-child {
-		margin-top: calc(var(--padding-vertical) * -1) !important;
-	}
-	
-	.container.style2.columns > .wrapper > .inner > div:last-of-type > .full:last-child {
-		margin-bottom: calc(var(--padding-vertical) * -1) !important;
-	}
-	
-	.container.style2.columns > .wrapper > .inner > div:first-of-type, .container.style2.columns > .wrapper > .inner > div:first-of-type > .full:first-child {
-		border-top-left-radius: inherit;
-		border-top-right-radius: inherit;
-	}
-	
-	.container.style2.columns > .wrapper > .inner > div:last-of-type, .container.style2.columns > .wrapper > .inner > div:last-of-type > .full:last-child {
-		border-bottom-left-radius: inherit;
-		border-bottom-right-radius: inherit;
-	}
-	
-	.container.style2.columns > .wrapper > .inner > div:first-of-type, .container.style2.columns > .wrapper > .inner > div:first-of-type > .full:last-child {
-		border-bottom-left-radius: 0 !important;
-	}
-	
-	.container.style2.columns > .wrapper > .inner > div:last-of-type, .container.style2.columns > .wrapper > .inner > div:last-of-type > .full:first-child {
-		border-top-right-radius: 0 !important;
-	}
-	
-	.container.style2.columns > .wrapper > .inner > .full > .full:first-child:last-child {
-		height: auto;
-	}
-	
-	.container.style2.columns > .wrapper > .inner > .full > .full:first-child:last-child > * {
-		height: auto;
-		position: relative;
-		width: auto;
-	}
-	
-	
-	.image.style1:not(:first-child) {
-		margin-top: 2.625rem !important;
-	}
-	
-	.image.style1:not(:last-child) {
-		margin-bottom: 2.625rem !important;
-	}
-	
+
 	.image.style1 .frame {
 		height: 25rem !important;
 	}
@@ -1419,6 +1231,8 @@ background: linear-gradient(to left top,  #00527e00,#00527ee4);;
 		font-size:64px;
 	}
 	
+
+	 
 	.hero .info p{
 		margin:0.2em 0;
 	}
@@ -1453,13 +1267,30 @@ background: linear-gradient(to left top,  #00527e00,#00527ee4);;
 }
 
 @media (max-width: 420px) {
+
+	h2:before{
+		position: absolute;
+		bottom: -0.25em;
+		left: -1em;
+		content:url(./images/rects_small.png);
+	z-index:-1;
+	}
+
+	h2{
+		font-size:1.25rem;
+	}
 	.hero h1>span.ja{
 		font-size:1.25rem;
 		
 	}
 
+	.hero h1>span.en{
+
+		margin:0.3em 0;
+	 }
+
 	.hero h1>span.en>span{
-		margin-bottom:20px;
+		margin-bottom:8px;
 	}
 	.hero .info p{
 		margin:0.2em 0;
@@ -1474,7 +1305,7 @@ background: linear-gradient(to left top,  #00527e00,#00527ee4);;
 	margin:1em 0;
 	}
 
-	.hero .info .location-data>p{
+	.hero .info .location-data{
 		font-size:0.875rem;
 	}
 
@@ -1502,18 +1333,7 @@ background: linear-gradient(to left top,  #00527e00,#00527ee4);;
 		--spacing: 0.75rem;
 	}
 	
-	h1.style2, h2.style2, h3.style2, p.style2 {
-		font-size: 0.875em;
-	}
 
-	h1.style1, h2.style1, h3.style1, p.style1 {
-		font-size: 0.875em;
-	}
-	
-	h1.style4, h2.style4, h3.style4, p.style4 {
-		font-size: 1em;
-	}
-	
 	.icons.style1 {
 		gap: 0.65625rem;
 	}
